[package]
name = "p2pmc_webrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO reduce features for smaller bundle size?
tokio = { version = "1.34.0", features = ["full", "tracing"] }
futures = "0.3.31"
# WebSockets
tokio-tungstenite = { version = "0.26.1", features = ["default", "native-tls"] }
# Peer to peer
webrtc = "0.12.0"
# Util
serde_json = "1.0.138"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
bytes = "1.10.1"
url = "2.5.4"
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
# Crypto
rand = "0.9.0"
rcgen = "0.13.2"
time = "0.3.37"
age = "0.11.1"
rustls-webpki = "0.102.8"
x509-parser = { version = "0.17.0", features = ["verify"] }
# CLI
clap = { version = "*", features = ["derive"] }
# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# Zipping
walkdir = { version = "2.5.0", optional = true }
zip = { version = "2.2.0", features = ["deflate-flate2"], optional = true }
flate2 = "1.1.0"
tar = "0.4.44"
# NBT
fastnbt = "2.5.0"

# For flutter_rust_bridge: cancellable async functions (so they can be interrupted by user)
cancellable = { path = "cancellable" }
flutter_rust_bridge = "=2.9.0"

# Taken from flutter_rust_bridge source crate boilerplate (in flutter project in /rust)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
debug = "none"
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false